--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,3 +26,11 @@ a{
     opacity: 1;
   }
 }
+/*  make the pages static  */
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    scroll-behavior: auto;
+    background-attachment: scroll;
+}
